--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.context-path=/myspringboot
 
 # springBoot 数据源
 spring.datasource.druid.name=testDruid
-spring.datasource.druid.url=jdbc:mysql://192.168.31.128:3306/db1?useUnicode=true&characterEncoding=utf-8
+spring.datasource.druid.url=jdbc:mysql://192.168.31.128:3306/myspringboot?useUnicode=true&characterEncoding=utf-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
@@ -19,6 +19,7 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.check-config-location=true
 
 #分页插件的配置
+pagehelper.helperDialect=mysql
 pagehelper.autoDialect=true
 pagehelper.closeConn=false
 pagehelper.reasonable=true
