--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.check-config-location=true
 
-#·ÖÒ³²å¼şµÄÅäÖÃ
+#pagehelper
 pagehelper.helperDialect=mysql
-pagehelper.autoDialect=true
-pagehelper.closeConn=false
 pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
