--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-        <!-- mybatis的分页插件 -->
+        <!--pagehelper-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.1.1</version>
+            <version>1.2.3</version>
         </dependency>
 
 
