--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
+# «∞∂Àhtml“≥√Ê≈‰÷√
+spring.thymeleaf.prefix=classpath:templates
