加入读文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initial-size=5
 
 # MyBatis注解形式扫描实体类路径
-mybatis.type-aliases-package=com.meng.vo
+mybatis.type-aliases-package=com.meng.user.vo
 # MyBatis XML形式配置文件路径
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
