--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,23 @@
             <version>1.2.3</version>
         </dependency>
 
-        <!-- springBoot 静态页面依赖 -->
+        <!-- swagger2 api-->
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <!-- springBoot 静态页面依赖 -->
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
+        </dependency>-->
 
 
 
