--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.context-path=/myspringboot
 
 # springBoot 数据源
 spring.datasource.druid.name=testDruid
-spring.datasource.druid.url=jdbc:mysql://192.168.31.128:3306/myspringboot?useUnicode=true&characterEncoding=utf-8
+spring.datasource.druid.url=jdbc:mysql://hd2:3306/myspringboot?useUnicode=true&characterEncoding=utf-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
@@ -24,5 +24,4 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
-# 前端html页面配置
-spring.thymeleaf.prefix=classpath:templates
+
