--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-# tomcatÆô¶¯µÄ¶Ë¿Ú
-server.port=80
-# ·ÃÎÊÏîÄ¿µÄÂ·¾¶
+# tomcatï¿½ï¿½ï¿½ï¿½ï¿½Ä¶Ë¿ï¿½
+server.port=8080
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½Â·ï¿½ï¿½
 server.context-path=/myspringboot
 
-# springBoot Êı¾İÔ´
+# springBoot ï¿½ï¿½ï¿½ï¿½Ô´
 spring.datasource.druid.name=testDruid
-spring.datasource.druid.url=jdbc:mysql://hd2:3306/myspringboot?useUnicode=true&characterEncoding=utf-8
+spring.datasource.druid.url=jdbc:mysql://hd1:3306/myspringboot?useUnicode=true&characterEncoding=utf-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initial-size=5
 
-# MyBatis×¢½âĞÎÊ½É¨ÃèÊµÌåÀàÂ·¾¶
+# MyBatis×¢ï¿½ï¿½ï¿½ï¿½Ê½É¨ï¿½ï¿½Êµï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½
 mybatis.type-aliases-package=com.meng.user.vo
-# MyBatis XMLĞÎÊ½ÅäÖÃÎÄ¼şÂ·¾¶
+# MyBatis XMLï¿½ï¿½Ê½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½Â·ï¿½ï¿½
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.check-config-location=true
